More css mods - make sure the cards stay under the header bar in z-index order.

--- a/ext/jquery-ui/1.10.3/css/custom-theme/jquery-ui-1.10.0.custom.css
+++ b/ext/jquery-ui/1.10.3/css/custom-theme/jquery-ui-1.10.0.custom.css
@@ -924,7 +924,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
   position: fixed;
   /*top: 10%;
   width: 560px;*/
-  z-index: 1050;
+  /*z-index: 1050;*/
 }
 .ui-dialog .ui-dialog-titlebar { /*padding: .4em 1em;*/
   position: relative;
